2010-09-20  Vangelis Kokkevis  <vangelis@chromium.org>

        Unreviewed, rolling out r67906.
        http://trac.webkit.org/changeset/67906
        https://bugs.webkit.org/show_bug.cgi?id=46139

        Change causes chromium to crash when switching pages

        * platform/graphics/chromium/ContentLayerChromium.h:
        * platform/graphics/chromium/LayerChromium.h:

2010-09-19  Antonio Gomes  <agomes@rim.com>

        Reviewed by Ojan Vafai.

        SelectionController::modify should ask EditingBehavior for platform specific behavior
        https://bugs.webkit.org/show_bug.cgi?id=41975

        As a follow up of the refactoring work in bug 39854, patch makes SelectionController::modify()
        stop accessing EditingBehaviorType values directly, and replaces its use by the EditingBehavior
        class.

        Since the "Settings*" parameter of the private SelectionController::modify() method becomes unneeded
        with this change (it was used to query the editingBehaviorType), patch merges two modify() methods.

        No behavior change, so no new tests.

        * editing/EditingBehavior.h:
        (WebCore::EditingBehavior::shouldAlwaysGrowSelectionWhenExtendingToBoundary):
        * editing/SelectionController.cpp:
        (WebCore::SelectionController::modify):
        * editing/SelectionController.h:

2010-09-20  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by James Robinson.

        [chromium] Making destructors of LayerChromium and ContentLayerChromium virtual
        so that the derived class' destructor code gets called.
        https://bugs.webkit.org/show_bug.cgi?id=46139

        * platform/graphics/chromium/ContentLayerChromium.h:
        * platform/graphics/chromium/LayerChromium.h:

2010-09-20  Darin Adler  <darin@apple.com>

        Reviewed by James Robinson.

        Deprecate the inputType function on HTMLInputElement
        https://bugs.webkit.org/show_bug.cgi?id=46023

        * html/HTMLInputElement.cpp: