@@ -1519,7 +1519,7 @@ void RenderBox::calcHeight()
         && (isRoot() || (isBody() && document()->documentElement()->renderer()->style()->height().isPercent()));
     if (stretchesToViewHeight() || paginatedContentNeedsBaseHeight) {
         int margins = collapsedMarginTop() + collapsedMarginBottom();
-        int visHeight = document()->printing() ? view()->pageHeight() : view()->viewHeight();
+        int visHeight = document()->printing() ? static_cast<int>(view()->pageHeight()) : view()->viewHeight();
         if (isRoot())
             setHeight(max(height(), visHeight - margins));
         else {
